--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "4.19.2"
+    "dotenv": "16.4.5",
+    "express": "4.19.2",
+    "mongoose": "8.5.1"
   },
   "devDependencies": {
     "nodemon": "3.1.4",
     "standard": "16.0.3"
-  },
-  "eslintConfig": {
-    "extends": "./node_modules/standard/eslintrc.json"
   }
 }
